@@ -101,15 +101,15 @@ public class SDMSGrantTableGeneric extends SDMSTable
 
 		env.tx.beginSubTransaction(env);
 		SDMSGrantGeneric o = new SDMSGrantGeneric(env
-		                , p_objectId
-		                , p_gId
-		                , p_objectType
-		                , p_privs
-		                , p_deleteVersion
-		                , p_creatorUId
-		                , p_createTs
-		                , p_changerUId
-		                , p_changeTs
+				, p_objectId
+				, p_gId
+				, p_objectType
+				, p_privs
+				, p_deleteVersion
+				, p_creatorUId
+				, p_createTs
+				, p_changerUId
+				, p_changeTs
 		                                         );
 
 		SDMSGrant p;
@@ -176,22 +176,22 @@ public class SDMSGrantTableGeneric extends SDMSTable
 		long validTo;
 
 		try {
-			id     = new Long (r.getLong(1));
-			objectId = new Long (r.getLong(2));
-			gId = new Long (r.getLong(3));
-			objectType = new Integer (r.getInt(4));
-			privs = new Long (r.getLong(5));
-			deleteVersion = new Long (r.getLong(6));
+			id     = Long.valueOf (r.getLong(1));
+			objectId = Long.valueOf (r.getLong(2));
+			gId = Long.valueOf (r.getLong(3));
+			objectType = Integer.valueOf (r.getInt(4));
+			privs = Long.valueOf (r.getLong(5));
+			deleteVersion = Long.valueOf (r.getLong(6));
 			if (r.wasNull()) deleteVersion = null;
-			creatorUId = new Long (r.getLong(7));
-			createTs = new Long (r.getLong(8));
-			changerUId = new Long (r.getLong(9));
-			changeTs = new Long (r.getLong(10));
+			creatorUId = Long.valueOf (r.getLong(7));
+			createTs = Long.valueOf (r.getLong(8));
+			changerUId = Long.valueOf (r.getLong(9));
+			changeTs = Long.valueOf (r.getLong(10));
 			validFrom = 0;
 			validTo = Long.MAX_VALUE;
 		} catch(SQLException sqle) {
 			SDMSThread.doTrace(null, "SQL Error : " + sqle.getMessage(), SDMSThread.SEVERITY_ERROR);
-			throw new FatalException(new SDMSMessage(env, "01110182045", "Grant: $1 $2", new Integer(sqle.getErrorCode()), sqle.getMessage()));
+			throw new FatalException(new SDMSMessage(env, "01110182045", "Grant: $1 $2", Integer.valueOf(sqle.getErrorCode()), sqle.getMessage()));
 		}
 		if(validTo < env.lowestActiveVersion) return null;
 		return new SDMSGrantGeneric(id,
@@ -231,8 +231,13 @@ public class SDMSGrantTableGeneric extends SDMSTable
 		                                   " FROM " + squote + tableName() + equote +
 		                                   ""						  );
 		while(rset.next()) {
-			if(loadObject(env, rset)) ++loaded;
-			++read;
+			try {
+				if(loadObject(env, rset)) ++loaded;
+				++read;
+			} catch (Exception e) {
+				SDMSThread.doTrace(null, "Exception caught while loading table " + tableName() + ", ID = " + Long.valueOf (rset.getLong(1)), SDMSThread.SEVERITY_ERROR);
+				throw(e);
+			}
 		}
 		stmt.close();
 		SDMSThread.doTrace(null, "Read " + read + ", Loaded " + loaded + " rows for " + tableName(), SDMSThread.SEVERITY_INFO);
