@@ -92,12 +92,12 @@ public class SDMSMemberTableGeneric extends SDMSTable
 
 		env.tx.beginSubTransaction(env);
 		SDMSMemberGeneric o = new SDMSMemberGeneric(env
-		                , p_gId
-		                , p_uId
-		                , p_creatorUId
-		                , p_createTs
-		                , p_changerUId
-		                , p_changeTs
+				, p_gId
+				, p_uId
+				, p_creatorUId
+				, p_createTs
+				, p_changerUId
+				, p_changeTs
 		                                           );
 
 		SDMSMember p;
@@ -156,18 +156,18 @@ public class SDMSMemberTableGeneric extends SDMSTable
 		long validTo;
 
 		try {
-			id     = new Long (r.getLong(1));
-			gId = new Long (r.getLong(2));
-			uId = new Long (r.getLong(3));
-			creatorUId = new Long (r.getLong(4));
-			createTs = new Long (r.getLong(5));
-			changerUId = new Long (r.getLong(6));
-			changeTs = new Long (r.getLong(7));
+			id     = Long.valueOf (r.getLong(1));
+			gId = Long.valueOf (r.getLong(2));
+			uId = Long.valueOf (r.getLong(3));
+			creatorUId = Long.valueOf (r.getLong(4));
+			createTs = Long.valueOf (r.getLong(5));
+			changerUId = Long.valueOf (r.getLong(6));
+			changeTs = Long.valueOf (r.getLong(7));
 			validFrom = 0;
 			validTo = Long.MAX_VALUE;
 		} catch(SQLException sqle) {
 			SDMSThread.doTrace(null, "SQL Error : " + sqle.getMessage(), SDMSThread.SEVERITY_ERROR);
-			throw new FatalException(new SDMSMessage(env, "01110182045", "Member: $1 $2", new Integer(sqle.getErrorCode()), sqle.getMessage()));
+			throw new FatalException(new SDMSMessage(env, "01110182045", "Member: $1 $2", Integer.valueOf(sqle.getErrorCode()), sqle.getMessage()));
 		}
 		if(validTo < env.lowestActiveVersion) return null;
 		return new SDMSMemberGeneric(id,
@@ -201,8 +201,13 @@ public class SDMSMemberTableGeneric extends SDMSTable
 		                                   " FROM " + squote + tableName() + equote +
 		                                   ""						  );
 		while(rset.next()) {
-			if(loadObject(env, rset)) ++loaded;
-			++read;
+			try {
+				if(loadObject(env, rset)) ++loaded;
+				++read;
+			} catch (Exception e) {
+				SDMSThread.doTrace(null, "Exception caught while loading table " + tableName() + ", ID = " + Long.valueOf (rset.getLong(1)), SDMSThread.SEVERITY_ERROR);
+				throw(e);
+			}
 		}
 		stmt.close();
 		SDMSThread.doTrace(null, "Read " + read + ", Loaded " + loaded + " rows for " + tableName(), SDMSThread.SEVERITY_INFO);
