@@ -9,10 +9,10 @@ mailto:contact@independit.de
 
 This file is part of schedulix
 
-schedulix is free software: 
-you can redistribute it and/or modify it under the terms of the 
-GNU Affero General Public License as published by the 
-Free Software Foundation, either version 3 of the License, 
+schedulix is free software:
+you can redistribute it and/or modify it under the terms of the
+GNU Affero General Public License as published by the
+Free Software Foundation, either version 3 of the License,
 or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
@@ -23,7 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
 
 package de.independit.scheduler.server.repository;
 
@@ -69,8 +68,7 @@ public class SDMSResourceAllocationTable extends SDMSResourceAllocationTableGene
 			r = SDMSResourceTable.getObject(env, p_rId);
 			Integer rAmount = r.getFreeAmount(env);
 			if (rAmount != null ) {
-
-				rAmount = new Integer(rAmount.intValue() - Math.max (p_amount.intValue(), 0));
+				rAmount = Integer.valueOf(rAmount.intValue() - Math.max (p_amount.intValue(), 0));
 				r.setFreeAmount(env, rAmount);
 			}
 		}
