@@ -24,7 +24,6 @@ You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
 
-
 package de.independit.scheduler.server.repository;
 
 import java.io.*;
@@ -55,9 +54,9 @@ public class SDMSSmeCounterTable extends SDMSSmeCounterTableGeneric
 
 		TimeZone tz = SystemEnvironment.systemTimeZone;
 		GregorianCalendar c = new GregorianCalendar(tz);
-		Integer day = new Integer(c.get(Calendar.DAY_OF_MONTH));
-		Integer month = new Integer(c.get(Calendar.MONTH)+1);
-		Integer year = new Integer(c.get(Calendar.YEAR));
+		Integer day = Integer.valueOf(c.get(Calendar.DAY_OF_MONTH));
+		Integer month = Integer.valueOf(c.get(Calendar.MONTH)+1);
+		Integer year = Integer.valueOf(c.get(Calendar.YEAR));
 		Integer cnt;
 		Long chksum;
 
@@ -65,18 +64,18 @@ public class SDMSSmeCounterTable extends SDMSSmeCounterTableGeneric
 		try {
 			ctr = SDMSSmeCounterTable.idx_jahr_monat_tag_getUniqueForUpdate(env, new SDMSKey(year, month, day));
 		} catch(NotFoundException nfe) {
-			ctr = SDMSSmeCounterTable.table.create(env, year, month, day, new Integer(0), new Long(0));
+			ctr = SDMSSmeCounterTable.table.create(env, year, month, day, Integer.valueOf(0), Long.valueOf(0));
 		}
 
 		cnt = ctr.getAnzahl(env);
-		cnt = new Integer(cnt.intValue() + n);
+		cnt = Integer.valueOf(cnt.intValue() + n);
 
-		chksum = new Long(CheckSum.fastchksum(year.intValue(), month.intValue(), day.intValue(), cnt.intValue()));
+		chksum = Long.valueOf(CheckSum.fastchksum(year.intValue(), month.intValue(), day.intValue(), cnt.intValue()));
 
 		ctr.setAnzahl(env, cnt);
 		ctr.setChecksum(env, chksum);
 
-		env.tx.smeCtr = new Integer(0);
+		env.tx.smeCtr = Integer.valueOf(0);
 	}
 
 }
