@@ -86,12 +86,12 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	public static final String S_SUBMITTS		= "SUBMITTIME";
 	public static final String S_STARTTS		= "STARTTIME";
 	public static final String S_EXPRUNTIME		= "EXPRUNTIME";
-	public static final String S_EXPFINALTIME 	= "EXPFINALTIME";
+	public static final String S_EXPFINALTIME	= "EXPFINALTIME";
 	public static final String S_JOBSTATE		= "JOBSTATE";
 	public static final String S_MERGEDSTATE	= "MERGEDSTATE";
 	public static final String S_PARENTID		= "PARENTID";
 	public static final String S_STATE		= "STATE";
-	public static final String S_ISRESTARTABLE	 = "ISRESTARTABLE";
+	public static final String S_ISRESTARTABLE	= "ISRESTARTABLE";
 	public static final String S_SYNCTS		= "SYNCTIME";
 	public static final String S_RESOURCETS		= "RESOURCETIME";
 	public static final String S_RUNNABLETS		= "RUNNABLETIME";
@@ -116,8 +116,8 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	public static final String S_SEOWNER		= "SEOWNER";
 	public static final String S_ENVIRONMENT	= "ENVIRONMENT";
 
-	protected static final Integer zero = new Integer(0);
-	protected static final Long lzero = new Long(0);
+	protected static final Integer zero = Integer.valueOf(0);
+	protected static final Long lzero = Long.valueOf(0);
 
 	protected static final VariableResolver SVR = new SmeVariableResolver();
 
@@ -125,24 +125,24 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 
 	static
 	{
-		mapper.put(new Integer(Parser.SUBMITTED),		new Integer(SDMSSubmittedEntity.SUBMITTED));
-		mapper.put(new Integer(Parser.DEPENDENCY_WAIT),		new Integer(SDMSSubmittedEntity.DEPENDENCY_WAIT));
-		mapper.put(new Integer(Parser.SYNCHRONIZE_WAIT),	new Integer(SDMSSubmittedEntity.SYNCHRONIZE_WAIT));
-		mapper.put(new Integer(Parser.RESOURCE_WAIT),		new Integer(SDMSSubmittedEntity.RESOURCE_WAIT));
-		mapper.put(new Integer(Parser.RUNNABLE),		new Integer(SDMSSubmittedEntity.RUNNABLE));
-		mapper.put(new Integer(Parser.STARTING),		new Integer(SDMSSubmittedEntity.STARTING));
-		mapper.put(new Integer(Parser.STARTED),			new Integer(SDMSSubmittedEntity.STARTED));
-		mapper.put(new Integer(Parser.RUNNING),			new Integer(SDMSSubmittedEntity.RUNNING));
-		mapper.put(new Integer(Parser.FINISHED),		new Integer(SDMSSubmittedEntity.FINISHED));
-		mapper.put(new Integer(Parser.FINAL),			new Integer(SDMSSubmittedEntity.FINAL));
-		mapper.put(new Integer(Parser.BROKEN_ACTIVE),		new Integer(SDMSSubmittedEntity.BROKEN_ACTIVE));
-		mapper.put(new Integer(Parser.BROKEN_FINISHED),		new Integer(SDMSSubmittedEntity.BROKEN_FINISHED));
-		mapper.put(new Integer(Parser.ERROR_TOKEN),		new Integer(SDMSSubmittedEntity.ERROR));
-		mapper.put(new Integer(Parser.TO_KILL),			new Integer(SDMSSubmittedEntity.TO_KILL));
-		mapper.put(new Integer(Parser.KILLED),			new Integer(SDMSSubmittedEntity.KILLED));
-		mapper.put(new Integer(Parser.CANCELLED),		new Integer(SDMSSubmittedEntity.CANCELLED));
-		mapper.put(new Integer(Parser.UNREACHABLE),		new Integer(SDMSSubmittedEntity.UNREACHABLE));
-		mapper.put(new Integer(Parser.SUSPENDED),		new Integer(SDMSSubmittedEntity.SUSPENDED));
+		mapper.put(Integer.valueOf(Parser.SUBMITTED),		Integer.valueOf(SDMSSubmittedEntity.SUBMITTED));
+		mapper.put(Integer.valueOf(Parser.DEPENDENCY_WAIT),	Integer.valueOf(SDMSSubmittedEntity.DEPENDENCY_WAIT));
+		mapper.put(Integer.valueOf(Parser.SYNCHRONIZE_WAIT),	Integer.valueOf(SDMSSubmittedEntity.SYNCHRONIZE_WAIT));
+		mapper.put(Integer.valueOf(Parser.RESOURCE_WAIT),	Integer.valueOf(SDMSSubmittedEntity.RESOURCE_WAIT));
+		mapper.put(Integer.valueOf(Parser.RUNNABLE),		Integer.valueOf(SDMSSubmittedEntity.RUNNABLE));
+		mapper.put(Integer.valueOf(Parser.STARTING),		Integer.valueOf(SDMSSubmittedEntity.STARTING));
+		mapper.put(Integer.valueOf(Parser.STARTED),		Integer.valueOf(SDMSSubmittedEntity.STARTED));
+		mapper.put(Integer.valueOf(Parser.RUNNING),		Integer.valueOf(SDMSSubmittedEntity.RUNNING));
+		mapper.put(Integer.valueOf(Parser.FINISHED),		Integer.valueOf(SDMSSubmittedEntity.FINISHED));
+		mapper.put(Integer.valueOf(Parser.FINAL),		Integer.valueOf(SDMSSubmittedEntity.FINAL));
+		mapper.put(Integer.valueOf(Parser.BROKEN_ACTIVE),	Integer.valueOf(SDMSSubmittedEntity.BROKEN_ACTIVE));
+		mapper.put(Integer.valueOf(Parser.BROKEN_FINISHED),	Integer.valueOf(SDMSSubmittedEntity.BROKEN_FINISHED));
+		mapper.put(Integer.valueOf(Parser.ERROR_TOKEN),		Integer.valueOf(SDMSSubmittedEntity.ERROR));
+		mapper.put(Integer.valueOf(Parser.TO_KILL),		Integer.valueOf(SDMSSubmittedEntity.TO_KILL));
+		mapper.put(Integer.valueOf(Parser.KILLED),		Integer.valueOf(SDMSSubmittedEntity.KILLED));
+		mapper.put(Integer.valueOf(Parser.CANCELLED),		Integer.valueOf(SDMSSubmittedEntity.CANCELLED));
+		mapper.put(Integer.valueOf(Parser.UNREACHABLE),		Integer.valueOf(SDMSSubmittedEntity.UNREACHABLE));
+		mapper.put(Integer.valueOf(Parser.SUSPENDED),		Integer.valueOf(SDMSSubmittedEntity.SUSPENDED));
 	}
 
 	protected SDMSSubmittedEntity(SDMSObject p_object)
@@ -201,7 +201,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public void suspend (SystemEnvironment sysEnv, boolean local, boolean admin)
-	throws SDMSException
+		throws SDMSException
 	{
 		suspend (sysEnv, local, admin, true);
 	}
@@ -218,7 +218,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public void resume (SystemEnvironment sysEnv, boolean admin)
-	throws SDMSException
+		throws SDMSException
 	{
 		resume (sysEnv, admin, true);
 	}
@@ -277,7 +277,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				                getStartTs(sysEnv),
 				                getFinishTs(sysEnv)
 				                                          );
-				setRerunSeq(sysEnv, new Integer(rerunSeq.intValue() + 1));
+				setRerunSeq(sysEnv, Integer.valueOf(rerunSeq.intValue() + 1));
 			}
 			setStartTs(sysEnv, null);
 			setFinishTs(sysEnv, null);
@@ -286,7 +286,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			setJobEsdId(sysEnv, null, false);
 			setJobEsdPref(sysEnv, null);
 
-			setState(sysEnv, new Integer(DEPENDENCY_WAIT));
+			setState(sysEnv, Integer.valueOf(DEPENDENCY_WAIT));
 
 			SystemEnvironment.sched.notifyChange(sysEnv, this, SchedulingThread.RERUN);
 			return true;
@@ -320,7 +320,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		}
 
 		Date dts = new Date();
-		Long ts = new Long (dts.getTime());
+		Long ts = Long.valueOf (dts.getTime());
 		long actVersion = getSeVersion(sysEnv).longValue();
 		String cmdLine = (SDMSSchedulingEntityTable.getObject(sysEnv, getSeId(sysEnv), actVersion)).getKillProgram(sysEnv);
 		if(cmdLine == null) return;
@@ -329,7 +329,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 								       getSeVersion(sysEnv),
 								       getId(sysEnv),
 								       getScopeId(sysEnv),
-								       new Integer(RUNNABLE),
+								       Integer.valueOf(RUNNABLE),
 								       null,
 								       cmdLine,
 								       getLogfile(sysEnv),
@@ -346,7 +346,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		SDMSRunnableQueueTable.table.create(sysEnv, kj.getId(sysEnv), getScopeId(sysEnv), kj.getState(sysEnv));
 
 		setKillId(sysEnv, kj.getId(sysEnv));
-		setState(sysEnv, new Integer(TO_KILL));
+		setState(sysEnv, Integer.valueOf(TO_KILL));
 		s.notify(sysEnv);
 	}
 
@@ -417,7 +417,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			releaseResources(sysEnv, CANCELLED);
 
 		if (!active)
-			setState(sysEnv, new Integer(CANCELLED));
+			setState(sysEnv, Integer.valueOf(CANCELLED));
 		Vector v_sme = SDMSSubmittedEntityTable.idx_parentId.getVector(sysEnv, smeId);
 		Iterator i_sme = v_sme.iterator();
 		while (i_sme.hasNext()) {
@@ -464,7 +464,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public void disable(Boolean isDisable, SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		if (isDisable.booleanValue()) {
 			int state = getState(sysEnv).intValue();
@@ -512,7 +512,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public Boolean getDirectParentsAreDisabled (SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		boolean parentsDisabled = true;
 		Vector pv = SDMSHierarchyInstanceTable.idx_childId.getVector(sysEnv, getId(sysEnv));
@@ -524,18 +524,18 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				parentsDisabled = false;
 			}
 		}
-		return new Boolean(parentsDisabled);
+		return Boolean.valueOf(parentsDisabled);
 	}
 
 	private void doDisable(SystemEnvironment sysEnv, boolean root)
-	throws SDMSException
+		throws SDMSException
 	{
 		SDMSSubmittedEntity sme = this;
 		Long smeId = sme.getId(sysEnv);
 		if (sme.getIsDisabled(sysEnv).booleanValue()) return;
 		if (!root && !sme.getDirectParentsAreDisabled(sysEnv).booleanValue()) return;
 		sme.setIsDisabled(sysEnv, Boolean.TRUE);
-		sme.setState(sysEnv, new Integer(SDMSSubmittedEntity.DEPENDENCY_WAIT));
+		sme.setState(sysEnv, Integer.valueOf(SDMSSubmittedEntity.DEPENDENCY_WAIT));
 		sme.checkDependencies(sysEnv);
 		Vector v = SDMSHierarchyInstanceTable.idx_parentId.getVector(sysEnv, smeId);
 		Iterator i = v.iterator();
@@ -548,7 +548,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	private void doEnable(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		SDMSSubmittedEntity sme = this;
 		Long smeId = sme.getId(sysEnv);
@@ -557,7 +557,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 
 		if (state != SDMSSubmittedEntity.DEPENDENCY_WAIT) {
 				throw new CommonErrorException (new SDMSMessage (sysEnv, "03908251740",
-				                                "Cannot enable a submitted entity that is not in DEPENDENCY WAIT state"));
+								"Cannot enable a submitted entity that is not in DEPENDENCY WAIT state"));
 		}
 		sme.setIsDisabled(sysEnv, Boolean.FALSE);
 		sme.setState(sysEnv, SDMSSubmittedEntity.SUBMITTED);
@@ -586,7 +586,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			sme.getIsSuspended(sysEnv).intValue()		== NOSUSPEND	&&
 			sme.getChildSuspended(sysEnv).intValue()	<= 0		&&
 			sme.getJobIsFinal(sysEnv).booleanValue()	== true		&&
-			sme.getCntSubmitted(sysEnv).intValue()		== 0 		&&
+			sme.getCntSubmitted(sysEnv).intValue()		== 0		&&
 			sme.getCntDependencyWait(sysEnv).intValue()	> 0 		&&
 			sme.getCntSynchronizeWait(sysEnv).intValue()	== 0		&&
 			sme.getCntResourceWait(sysEnv).intValue()	== 0		&&
@@ -684,7 +684,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	private Long getDefaultEsdId(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		int pref = 0;
 		int pref1 = 0;
@@ -737,7 +737,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 
 			releaseResources(sysEnv, FINAL);
 
-			setState(sysEnv, new Integer(FINAL));
+			setState(sysEnv, Integer.valueOf(FINAL));
 			removeAsyncTrigger(sysEnv);
 			deleteLocalResources(sysEnv);
 			try {
@@ -769,7 +769,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		suspend (sysEnv, suspend, local, admin, operator, false);
 	}
 	private void suspend (SystemEnvironment sysEnv, boolean suspend, boolean local, boolean admin, boolean operator, boolean cancelResume)
-	throws SDMSException
+		throws SDMSException
 	{
 		int oldSuspended = getIsSuspended(sysEnv).intValue();
 		Boolean booleanLocal = getIsSuspendedLocal(sysEnv);
@@ -799,7 +799,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			else
 				local = false;
 		} else {
-			setIsSuspendedLocal(sysEnv, new Boolean(local));
+			setIsSuspendedLocal(sysEnv, Boolean.valueOf(local));
 			setResumeTs(sysEnv, null);
 		}
 
@@ -811,7 +811,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		else
 			newSuspended = NOSUSPEND;
 
-		setIsSuspended(sysEnv, new Integer(newSuspended));
+		setIsSuspended(sysEnv, Integer.valueOf(newSuspended));
 		if (!suspend)
 			setIsSuspendedLocal(sysEnv, Boolean.FALSE);
 
@@ -850,13 +850,13 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		if(suspend) {
 			if(state == RESOURCE_WAIT || state == RUNNABLE) {
 				releaseResources(sysEnv, SYNCHRONIZE_WAIT);
-				setState(sysEnv, new Integer(DEPENDENCY_WAIT));
+				setState(sysEnv, Integer.valueOf(DEPENDENCY_WAIT));
 			}
 			if (operator)
-				setOpSusresTs(sysEnv, new Long(-ts));
+				setOpSusresTs(sysEnv, Long.valueOf(-ts));
 		} else {
 			if (operator)
-				setOpSusresTs(sysEnv, new Long(ts));
+				setOpSusresTs(sysEnv, Long.valueOf(ts));
 			testDependencies(sysEnv);
 			checkDeferStall(sysEnv);
 
@@ -878,7 +878,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			SDMSSubmittedEntity child_sme = SDMSSubmittedEntityTable.getObject(sysEnv, hi.getChildId(sysEnv));
 			Integer childParentSuspended = child_sme.getParentSuspended(sysEnv).intValue();
 			int newParentSuspended = parentSuspended + childParentSuspended;
-			child_sme.setParentSuspended(sysEnv, new Integer (newParentSuspended));
+			child_sme.setParentSuspended(sysEnv, Integer.valueOf (newParentSuspended));
 			if (newParentSuspended == 0 && child_sme.getIsSuspended(sysEnv).intValue() == NOSUSPEND) {
 				child_sme.testDependencies(sysEnv);
 			}
@@ -1057,24 +1057,24 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 							"Cannot resolve dependency of $1 from $2 for Version $3",
 							dse.pathString(sysEnv, seVersion),
 							rse.pathString(sysEnv, seVersion),
-							new Long (seVersion)
+							Long.valueOf (seVersion)
 							));
 					case SDMSDependencyDefinition.SUSPEND:
 						suspend(sysEnv, false, false);
 						Date dts = new Date();
-						Long ts = new Long (dts.getTime());
+						Long ts = Long.valueOf (dts.getTime());
 						continue;
 					case SDMSDependencyDefinition.DEFER:
 					case SDMSDependencyDefinition.DEFER_IGNORE:
-						state = new Integer(SDMSDependencyInstance.DEFERRED);
+						state = Integer.valueOf(SDMSDependencyInstance.DEFERRED);
 						break;
 				}
 			} else {
 				Long smeId = sme.getId(sysEnv);
 				requiredId = smeId;
-				state = new Integer(SDMSDependencyInstance.OPEN);
+				state = Integer.valueOf(SDMSDependencyInstance.OPEN);
 			}
-			Integer ignore = new Integer(SDMSDependencyInstance.NO);
+			Integer ignore = Integer.valueOf(SDMSDependencyInstance.NO);
 
 			SDMSDependencyInstance di;
 			try {
@@ -1084,11 +1084,11 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 						id,
 						dependencyOperation,
 						requiredId,
-				                requiredSeId,
+						requiredSeId,
 						state,
 						ignore,
-						new Long(0),
-						new Long(seVersion)
+						Long.valueOf(0),
+						Long.valueOf(seVersion)
 					);
 
 				Long diIdOrig = di.getId(sysEnv);
@@ -1097,7 +1097,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				di.check(sysEnv, null, false);
 
 				createChildDependencyInstances (sysEnv, ddId, ddName, id,
-				                                dependencyOperation, requiredId, requiredSeId, di.getState(sysEnv), ignore, diIdOrig, new Long(seVersion));
+				                                dependencyOperation, requiredId, requiredSeId, di.getState(sysEnv), ignore, diIdOrig, Long.valueOf(seVersion));
 			} catch (DuplicateKeyException dke) {
 			}
 		}
@@ -1183,7 +1183,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 								       false,
 								       false,
 								       true
-								      );
+					);
 				if (rSme == null && resolveMode != SDMSDependencyDefinition.INTERNAL)
 					rSme = dSme.getExternalSubmittedEntity (sysEnv, dd);
 				if (rSme == null)
@@ -1215,7 +1215,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				Long dSeId = dSme.getSeId(sysEnv);
 				SDMSSchedulingEntity se = SDMSSchedulingEntityTable.getObject(sysEnv, dSeId, dSme.getSeVersion(sysEnv));
 				Integer dependencyOperation = se.getDependencyOperation(sysEnv);
-				state = new Integer(SDMSDependencyInstance.OPEN);
+				state = Integer.valueOf(SDMSDependencyInstance.OPEN);
 				try {
 					boolean found = false;
 					Vector v_di = SDMSDependencyInstanceTable.idx_dependentId.getVector(sysEnv, dSmeId);
@@ -1256,7 +1256,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 						}
 					}
 					if (!found) {
-						Integer ignore = new Integer(SDMSDependencyInstance.NO);
+						Integer ignore = Integer.valueOf(SDMSDependencyInstance.NO);
 						SDMSDependencyInstance di = SDMSDependencyInstanceTable.table.create(sysEnv,
 										ddId,
 										dSmeId,
@@ -1266,7 +1266,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 										null,
 										state,
 										ignore,
-										new Long(0),
+										Long.valueOf(0),
 										ddSeVersion
 							);
 						Long diIdOrig = di.getId(sysEnv);
@@ -1346,7 +1346,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	SDMSSubmittedEntity getExternalSubmittedEntity (SystemEnvironment sysEnv,SDMSDependencyDefinition dd)
-	throws SDMSException
+		throws SDMSException
 	{
 		Integer expBase = dd.getExpiredBase(sysEnv);
 		Integer expAmount = dd.getExpiredAmount(sysEnv);
@@ -1454,7 +1454,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	private boolean isMyChild(SystemEnvironment sysEnv, Long hitId, Long targetId, Long ignoreId)
-	throws SDMSException
+		throws SDMSException
 	{
 		Vector parents = SDMSHierarchyInstanceTable.idx_childId.getVector(sysEnv, hitId);
 		for (int i = 0; i < parents.size(); ++i) {
@@ -1535,7 +1535,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		}
 		setJobIsFinal(sysEnv, Boolean.TRUE);
 		checkDependents(sysEnv);
-		setState(sysEnv, new Integer(FINISHED));
+		setState(sysEnv, Integer.valueOf(FINISHED));
 		trigger (sysEnv, SDMSTrigger.UNTIL_FINISHED);
 		trigger (sysEnv, SDMSTrigger.UNTIL_FINAL);
 		mergeExitStates(sysEnv);
@@ -1728,20 +1728,20 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		int type = se.getType(sysEnv).intValue();
 		switch (result) {
 			case NOTYET:
-				setState(sysEnv, new Integer(DEPENDENCY_WAIT));
+				setState(sysEnv, Integer.valueOf(DEPENDENCY_WAIT));
 				break;
 			case UNRESOLVED_SUSPEND:
 				suspend(sysEnv, false, false);
 				Date dts = new Date();
-				Long ts = new Long (dts.getTime());
+				Long ts = Long.valueOf (dts.getTime());
 				if (openOrDeferred) {
-					setState(sysEnv, new Integer(DEPENDENCY_WAIT));
+					setState(sysEnv, Integer.valueOf(DEPENDENCY_WAIT));
 					break;
 				}
 			case FULFILLED:
 
 				if(getState(sysEnv).intValue() == SUBMITTED)
-					setState(sysEnv, new Integer(DEPENDENCY_WAIT));
+					setState(sysEnv, Integer.valueOf(DEPENDENCY_WAIT));
 				if(getState(sysEnv).intValue() == ERROR)
 					break;
 				switch (type) {
@@ -1753,7 +1753,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 								if ((getIsSuspended(sysEnv).intValue() == SDMSSubmittedEntity.NOSUSPEND &&
 								     getParentSuspended(sysEnv).intValue() == 0) ||
 								    getRerunSeq(sysEnv).intValue() > 0) {
-									setState(sysEnv, new Integer(SYNCHRONIZE_WAIT));
+									setState(sysEnv, Integer.valueOf(SYNCHRONIZE_WAIT));
 								}
 							}
 							break;
@@ -1775,14 +1775,14 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				final Long esdIdUR = esp.getUnreachableState(sysEnv, seVersion);
 
 				if (esdIdUR == null) {
-					setState(sysEnv, new Integer(UNREACHABLE));
+					setState(sysEnv, Integer.valueOf(UNREACHABLE));
 				} else {
 					final SDMSExitState es = SDMSExitStateTable.idx_espId_esdId_getUnique(sysEnv, new SDMSKey(espId, esdIdUR), seVersion);
 					changeState(sysEnv, esdIdUR, es, null, null, null);
 				}
 				break;
 			case UNREACHABLE_CANCELLED:
-				setState(sysEnv, new Integer(UNREACHABLE));
+				setState(sysEnv, Integer.valueOf(UNREACHABLE));
 				break;
 			case BROKEN:
 				setToError(sysEnv, errorMessage);
@@ -1825,13 +1825,13 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				}
 				doSubmitChild(sysEnv, seId, parentSuspended, null,
 				              ownerId, sh, seVersion, newReplaceSmeId, null, null, null, true,
-				              isDisabled, new Integer(parentNiceX100));
+				              isDisabled, Integer.valueOf(parentNiceX100));
 			}
 		}
 	}
 
 	public TimeZone getEffectiveTimeZone(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		String tz = null;
 		Long masterId = getMasterId(sysEnv);
@@ -1848,13 +1848,13 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public String getEffectiveTimeZoneName(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		return getEffectiveTimeZone(sysEnv).getID();
 	}
 
 	private boolean evaluateDisable(SystemEnvironment sysEnv, SDMSSchedulingHierarchy sh)
-	throws SDMSException
+		throws SDMSException
 	{
 		boolean disable = sh.getIsDisabled(sysEnv);
 		long seVersion = getSeVersion(sysEnv).longValue();
@@ -1875,7 +1875,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				       SDMSSchedulingEntity se, SDMSSchedulingHierarchy sh)
 		throws SDMSException
 	{
-		SDMSKey k = new SDMSKey (masterId, seChildId, new Integer(SDMSSchedulingHierarchy.FAILURE));
+		SDMSKey k = new SDMSKey (masterId, seChildId, Integer.valueOf(SDMSSchedulingHierarchy.FAILURE));
 		Vector v = SDMSSubmittedEntityTable.idx_masterId_seId_mergeMode.getVector(sysEnv, k);
 		if (v.size() != 0) {
 			Long failId = ((SDMSSubmittedEntity)(v.elementAt(0))).getId(sysEnv);
@@ -1884,7 +1884,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 					"$1 alread submitted with id $2 and merge mode FAILURE in same Master run",
 					se.pathString(sysEnv, getSeVersion(sysEnv).longValue()),
 					failId
-					));
+			));
 		}
 		int mergeMode = sh.getMergeMode(sysEnv).intValue();
 		if (mergeMode == SDMSSchedulingHierarchy.FAILURE) {
@@ -2021,26 +2021,26 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		if (sme.getJobIsRestartable(sysEnv).booleanValue() == true) fixRestartable ++;
 		if (sme.getIsSuspended(sysEnv).intValue() != NOSUSPEND) fixChildSuspended ++;
 		if (sme.isPending(sysEnv)) fixPending ++;
-		if (fixSubmitted	!= 0) setCntSubmitted(sysEnv, new Integer(getCntSubmitted(sysEnv).intValue() + fixSubmitted));
-		if (fixDependencyWait	!= 0) setCntDependencyWait(sysEnv, new Integer(getCntDependencyWait(sysEnv).intValue() + fixDependencyWait));
-		if (fixSynchronizeWait	!= 0) setCntSynchronizeWait(sysEnv, new Integer(getCntSynchronizeWait(sysEnv).intValue() + fixSynchronizeWait));
-		if (fixResourceWait	!= 0) setCntResourceWait(sysEnv, new Integer(getCntResourceWait(sysEnv).intValue() + fixResourceWait));
-		if (fixRunnable		!= 0) setCntRunnable(sysEnv, new Integer(getCntRunnable(sysEnv).intValue() + fixRunnable));
-		if (fixStarting		!= 0) setCntStarting(sysEnv, new Integer(getCntStarting(sysEnv).intValue() + fixStarting));
-		if (fixStarted		!= 0) setCntStarted(sysEnv, new Integer(getCntStarted(sysEnv).intValue() + fixStarted));
-		if (fixRunning		!= 0) setCntRunning(sysEnv, new Integer(getCntRunning(sysEnv).intValue() + fixRunning));
-		if (fixToKill		!= 0) setCntToKill(sysEnv, new Integer(getCntToKill(sysEnv).intValue() + fixToKill));
-		if (fixKilled		!= 0) setCntKilled(sysEnv, new Integer(getCntKilled(sysEnv).intValue() + fixKilled));
-		if (fixCancelled	!= 0) setCntCancelled(sysEnv, new Integer(getCntCancelled(sysEnv).intValue() + fixCancelled));
-		if (fixFinished		!= 0) setCntFinished(sysEnv, new Integer(getCntFinished(sysEnv).intValue() + fixFinished));
-		if (fixFinal		!= 0) setCntFinal(sysEnv, new Integer(getCntFinal(sysEnv).intValue() + fixFinal));
-		if (fixBrokenActive	!= 0) setCntBrokenActive(sysEnv, new Integer(getCntBrokenActive(sysEnv).intValue() + fixBrokenActive));
-		if (fixBrokenFinished	!= 0) setCntBrokenFinished(sysEnv, new Integer(getCntBrokenFinished(sysEnv).intValue() + fixBrokenFinished));
-		if (fixError		!= 0) setCntError(sysEnv, new Integer(getCntError(sysEnv).intValue() + fixError));
-		if (fixUnreachable	!= 0) setCntUnreachable(sysEnv, new Integer(getCntUnreachable(sysEnv).intValue() + fixUnreachable));
-		if (fixRestartable	!= 0) setCntRestartable(sysEnv, new Integer(getCntRestartable(sysEnv).intValue() + fixRestartable));
-		if (fixChildSuspended	!= 0) setChildSuspended(sysEnv, new Integer(getChildSuspended(sysEnv).intValue() + fixChildSuspended));
-		if (fixPending		!= 0) setCntPending(sysEnv, new Integer(getCntPending(sysEnv).intValue() + fixPending));
+		if (fixSubmitted	!= 0) setCntSubmitted(sysEnv, Integer.valueOf(getCntSubmitted(sysEnv).intValue() + fixSubmitted));
+		if (fixDependencyWait	!= 0) setCntDependencyWait(sysEnv, Integer.valueOf(getCntDependencyWait(sysEnv).intValue() + fixDependencyWait));
+		if (fixSynchronizeWait	!= 0) setCntSynchronizeWait(sysEnv, Integer.valueOf(getCntSynchronizeWait(sysEnv).intValue() + fixSynchronizeWait));
+		if (fixResourceWait	!= 0) setCntResourceWait(sysEnv, Integer.valueOf(getCntResourceWait(sysEnv).intValue() + fixResourceWait));
+		if (fixRunnable		!= 0) setCntRunnable(sysEnv, Integer.valueOf(getCntRunnable(sysEnv).intValue() + fixRunnable));
+		if (fixStarting		!= 0) setCntStarting(sysEnv, Integer.valueOf(getCntStarting(sysEnv).intValue() + fixStarting));
+		if (fixStarted		!= 0) setCntStarted(sysEnv, Integer.valueOf(getCntStarted(sysEnv).intValue() + fixStarted));
+		if (fixRunning		!= 0) setCntRunning(sysEnv, Integer.valueOf(getCntRunning(sysEnv).intValue() + fixRunning));
+		if (fixToKill		!= 0) setCntToKill(sysEnv, Integer.valueOf(getCntToKill(sysEnv).intValue() + fixToKill));
+		if (fixKilled		!= 0) setCntKilled(sysEnv, Integer.valueOf(getCntKilled(sysEnv).intValue() + fixKilled));
+		if (fixCancelled	!= 0) setCntCancelled(sysEnv, Integer.valueOf(getCntCancelled(sysEnv).intValue() + fixCancelled));
+		if (fixFinished		!= 0) setCntFinished(sysEnv, Integer.valueOf(getCntFinished(sysEnv).intValue() + fixFinished));
+		if (fixFinal		!= 0) setCntFinal(sysEnv, Integer.valueOf(getCntFinal(sysEnv).intValue() + fixFinal));
+		if (fixBrokenActive	!= 0) setCntBrokenActive(sysEnv, Integer.valueOf(getCntBrokenActive(sysEnv).intValue() + fixBrokenActive));
+		if (fixBrokenFinished	!= 0) setCntBrokenFinished(sysEnv, Integer.valueOf(getCntBrokenFinished(sysEnv).intValue() + fixBrokenFinished));
+		if (fixError		!= 0) setCntError(sysEnv, Integer.valueOf(getCntError(sysEnv).intValue() + fixError));
+		if (fixUnreachable	!= 0) setCntUnreachable(sysEnv, Integer.valueOf(getCntUnreachable(sysEnv).intValue() + fixUnreachable));
+		if (fixRestartable	!= 0) setCntRestartable(sysEnv, Integer.valueOf(getCntRestartable(sysEnv).intValue() + fixRestartable));
+		if (fixChildSuspended	!= 0) setChildSuspended(sysEnv, Integer.valueOf(getChildSuspended(sysEnv).intValue() + fixChildSuspended));
+		if (fixPending		!= 0) setCntPending(sysEnv, Integer.valueOf(getCntPending(sysEnv).intValue() + fixPending));
 		fixCntInParents(sysEnv, fixSubmitted, fixDependencyWait, fixSynchronizeWait, fixResourceWait,
 				fixRunnable, fixStarting, fixStarted, fixRunning, fixToKill, fixKilled,
 				fixCancelled, fixFinished, fixFinal, fixBrokenActive, fixBrokenFinished,
@@ -2074,7 +2074,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		Long submitTs;
 
 		Date ts = new Date();
-		submitTs = new Long(ts.getTime());
+		submitTs = Long.valueOf(ts.getTime());
 
 		int myState = getState(sysEnv).intValue();
 		if (myState == CANCELLED || myState == FINAL)
@@ -2112,7 +2112,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				merged = true;
 				if (parentSuspended > 0) {
 					int sme_ps = sme.getParentSuspended(sysEnv).intValue() + parentSuspended;
-					sme.setParentSuspended(sysEnv, new Integer(sme_ps));
+					sme.setParentSuspended(sysEnv, Integer.valueOf(sme_ps));
 					sme.addParentSuspendedToChildren (sysEnv, parentSuspended);
 				}
 			}
@@ -2123,7 +2123,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			checkValidESP(sysEnv, se, seVersion);
 
 			sme = createSme(sysEnv, se, sh, childTag, ownerId, isStatic, isDisabled,
-			                (suspended.booleanValue() ? (forceSuspend == null ? new Integer(SUSPEND) : forceSuspend) : new Integer(NOSUSPEND)),
+			                (suspended.booleanValue() ? (forceSuspend == null ? Integer.valueOf(SUSPEND) : forceSuspend) : Integer.valueOf(NOSUSPEND)),
 			                parentSuspended, myResumeTs, replaceSmeId, submitTag, submitTs, null );
 		}
 		SDMSHierarchyInstance hi = SDMSHierarchyInstanceTable.table.create(sysEnv,
@@ -2133,7 +2133,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 					   sh.getPriority(sysEnv),
 					   null,
 					   null,
-					   new Long(seVersion)
+					   Long.valueOf(seVersion)
 		);
 		if (submit) {
 			int msParentSuspended = 0;
@@ -2175,7 +2175,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 								                                        milestoneSh.getPriority(sysEnv),
 								                                        null,
 								                                        null,
-								                                        new Long(seVersion)
+								                                        Long.valueOf(seVersion)
 								                                       );
 								int pSuspended =
 								        msParentSme.getParentSuspended(sysEnv).intValue() +
@@ -2187,7 +2187,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 					}
 				}
 			}
-			sme.setRawPriority(sysEnv, new Integer(parentNiceX100 + sme.getRawPriority(sysEnv).intValue()));
+			sme.setRawPriority(sysEnv, Integer.valueOf(parentNiceX100 + sme.getRawPriority(sysEnv).intValue()));
 
 			sme.submitChilds(sysEnv, parentSuspended + (suspended.booleanValue() ? 1 : 0) + msParentSuspended,
 			                 ownerId, replaceSmeId, parentNiceX100 + sme.getNice(sysEnv) * 100, isDisabled);
@@ -2222,7 +2222,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			int newPrio = parentNiceX100 + sme.getNice(sysEnv).intValue() * 100 + sme.getRawPriority(sysEnv).intValue();
 			int deltaPrio = newPrio - sme.getRawPriority(sysEnv);
 			if (deltaPrio != 0) {
-				sme.setRawPriority(sysEnv, new Integer(newPrio));
+				sme.setRawPriority(sysEnv, Integer.valueOf(newPrio));
 				sme.fixChildPrioritiesAndNpNice(sysEnv, deltaPrio, null);
 			}
 		}
@@ -2230,7 +2230,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	private void inheritDependencies(SystemEnvironment sysEnv, SDMSSubmittedEntity sme, long seVersion,
-					   SDMSHierarchyInstance hi)
+					 SDMSHierarchyInstance hi)
 		throws SDMSException
 	{
 		int smeState = sme.getState(sysEnv).intValue();
@@ -2254,9 +2254,9 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			try {
 				Integer ignore;
 				if (di.getIgnore(sysEnv).intValue() == SDMSDependencyInstance.RECURSIVE) {
-					ignore = new Integer(SDMSDependencyInstance.RECURSIVE);
+					ignore = Integer.valueOf(SDMSDependencyInstance.RECURSIVE);
 				} else {
-					ignore = new Integer(SDMSDependencyInstance.NO);
+					ignore = Integer.valueOf(SDMSDependencyInstance.NO);
 				}
 				Long dependentIdOrig = di.getDependentIdOrig(sysEnv);
 				Integer dependencyOperation = di.getDependencyOperation(sysEnv);
@@ -2274,10 +2274,10 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 						state,
 						ignore,
 						diIdOrig,
-						new Long(seVersion)
+						Long.valueOf(seVersion)
 				);
 				sme.createChildDependencyInstances (sysEnv, ddId, ddName, dependentIdOrig,
-				                                    dependencyOperation, requiredId, requiredSeId, state, ignore, diIdOrig, new Long(seVersion));
+				                                    dependencyOperation, requiredId, requiredSeId, state, ignore, diIdOrig, Long.valueOf(seVersion));
 			} catch (DuplicateKeyException dke) {
 			}
 		}
@@ -2340,7 +2340,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		while (i_p.hasNext()) {
 			SDMSHierarchyInstance hi = (SDMSHierarchyInstance)i_p.next();
 			SDMSSchedulingHierarchy sh = SDMSSchedulingHierarchyTable.getObject(sysEnv,
-									hi.getShId(sysEnv), seVersion);
+						hi.getShId(sysEnv), seVersion);
 			Long tresdId = esdId;
 			boolean p_is_reason = false;
 			if (sh.getEstpId(sysEnv) != null) {
@@ -2386,12 +2386,12 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		if (es.getIsRestartable(sysEnv).booleanValue()) {
 			setJobIsRestartable(sysEnv, Boolean.TRUE);
 			Date dts = new Date();
-			Long ts = new Long (dts.getTime());
+			Long ts = Long.valueOf (dts.getTime());
 
 		} else {
 			setJobIsRestartable(sysEnv, Boolean.FALSE);
 		}
-		setState(sysEnv, new Integer (FINISHED));
+		setState(sysEnv, Integer.valueOf (FINISHED));
 		if (finishTs != null)
 			setFinishTs(sysEnv, finishTs);
 
@@ -2580,7 +2580,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		int fixUnreachable = 0;
 
 		Date dts = new Date();
-		Long ts = new Long (dts.getTime());
+		Long ts = Long.valueOf (dts.getTime());
 
 		if (newState == STARTING && oldState != STARTING)
 			synchronized(SystemEnvironment.jidsStarting) {
@@ -2778,13 +2778,13 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			HashSet chs = (HashSet)sysEnv.tx.txData.get(SystemEnvironment.S_CANCEL_HASHSET);
 			if (!checkParentCancelled(sysEnv, mySmeId, chs)) {
 				Date adts = new Date();
-				Long ats = new Long (dts.getTime());
+				Long ats = Long.valueOf (dts.getTime());
 			}
 		}
 
 		if (newState == DEPENDENCY_WAIT) {
 			if (se.getType(sysEnv).intValue() == SDMSSchedulingEntity.JOB) {
-				this.setOldState(sysEnv, new Integer(oldState));
+				this.setOldState(sysEnv, Integer.valueOf(oldState));
 				SystemEnvironment.sched.addToRequestList(sysEnv, mySmeId);
 			} else
 				checkDependencies(sysEnv);
@@ -2796,7 +2796,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				SDMSThread.doTrace(sysEnv.cEnv, msg.toString(), SDMSThread.SEVERITY_FATAL);
 				throw new CommonErrorException(msg.toString());
 			}
-			this.setOldState(sysEnv, new Integer(oldState));
+			this.setOldState(sysEnv, Integer.valueOf(oldState));
 			SystemEnvironment.sched.addToRequestList(sysEnv, mySmeId);
 			setSyncTs(sysEnv, ts);
 			SystemEnvironment.sched.notifyChange(sysEnv, this, SchedulingThread.STATECHANGE);
@@ -2827,7 +2827,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	private HashSet<Long> collectDependents(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		HashSet<Long> result = new HashSet<Long>();
 		Long id = getId(sysEnv);
@@ -2848,7 +2848,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	private void checkDependents(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		HashSet<Long> smesToTest = collectDependents(sysEnv);
 		Iterator<Long> i = smesToTest.iterator();
@@ -2877,67 +2877,67 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			SDMSSubmittedEntity sme = SDMSSubmittedEntityTable.getObjectForUpdate(sysEnv, parentId);
 
 			if (fixSubmitted	!= 0) {
-				sme.setCntSubmitted(sysEnv, new Integer(sme.getCntSubmitted(sysEnv).intValue() + fixSubmitted));
+				sme.setCntSubmitted(sysEnv, Integer.valueOf(sme.getCntSubmitted(sysEnv).intValue() + fixSubmitted));
 			}
 			if (fixDependencyWait	!= 0) {
-				sme.setCntDependencyWait(sysEnv, new Integer(sme.getCntDependencyWait(sysEnv).intValue() + fixDependencyWait));
+				sme.setCntDependencyWait(sysEnv, Integer.valueOf(sme.getCntDependencyWait(sysEnv).intValue() + fixDependencyWait));
 			}
 			if (fixSynchronizeWait	!= 0) {
-				sme.setCntSynchronizeWait(sysEnv, new Integer(sme.getCntSynchronizeWait(sysEnv).intValue() + fixSynchronizeWait));
+				sme.setCntSynchronizeWait(sysEnv, Integer.valueOf(sme.getCntSynchronizeWait(sysEnv).intValue() + fixSynchronizeWait));
 			}
 			if (fixResourceWait	!= 0) {
-				sme.setCntResourceWait(sysEnv, new Integer(sme.getCntResourceWait(sysEnv).intValue() + fixResourceWait));
+				sme.setCntResourceWait(sysEnv, Integer.valueOf(sme.getCntResourceWait(sysEnv).intValue() + fixResourceWait));
 			}
 			if (fixRunnable		!= 0) {
-				sme.setCntRunnable(sysEnv, new Integer(sme.getCntRunnable(sysEnv).intValue() + fixRunnable));
+				sme.setCntRunnable(sysEnv, Integer.valueOf(sme.getCntRunnable(sysEnv).intValue() + fixRunnable));
 			}
 			if (fixStarting		!= 0) {
-				sme.setCntStarting(sysEnv, new Integer(sme.getCntStarting(sysEnv).intValue() + fixStarting));
+				sme.setCntStarting(sysEnv, Integer.valueOf(sme.getCntStarting(sysEnv).intValue() + fixStarting));
 			}
 			if (fixStarted		!= 0) {
-				sme.setCntStarted(sysEnv, new Integer(sme.getCntStarted(sysEnv).intValue() + fixStarted));
+				sme.setCntStarted(sysEnv, Integer.valueOf(sme.getCntStarted(sysEnv).intValue() + fixStarted));
 			}
 			if (fixRunning		!= 0) {
-				sme.setCntRunning(sysEnv, new Integer(sme.getCntRunning(sysEnv).intValue() + fixRunning));
+				sme.setCntRunning(sysEnv, Integer.valueOf(sme.getCntRunning(sysEnv).intValue() + fixRunning));
 			}
 			if (fixToKill		!= 0) {
-				sme.setCntToKill(sysEnv, new Integer(sme.getCntToKill(sysEnv).intValue() + fixToKill));
+				sme.setCntToKill(sysEnv, Integer.valueOf(sme.getCntToKill(sysEnv).intValue() + fixToKill));
 			}
 			if (fixKilled		!= 0) {
-				sme.setCntKilled(sysEnv, new Integer(sme.getCntKilled(sysEnv).intValue() + fixKilled));
+				sme.setCntKilled(sysEnv, Integer.valueOf(sme.getCntKilled(sysEnv).intValue() + fixKilled));
 			}
 			if (fixCancelled		!= 0) {
-				sme.setCntCancelled(sysEnv, new Integer(sme.getCntCancelled(sysEnv).intValue() + fixCancelled));
+				sme.setCntCancelled(sysEnv, Integer.valueOf(sme.getCntCancelled(sysEnv).intValue() + fixCancelled));
 			}
 			if (fixFinished		!= 0) {
-				sme.setCntFinished(sysEnv, new Integer(sme.getCntFinished(sysEnv).intValue() + fixFinished));
+				sme.setCntFinished(sysEnv, Integer.valueOf(sme.getCntFinished(sysEnv).intValue() + fixFinished));
 			}
 			if (fixFinal		!= 0) {
-				sme.setCntFinal(sysEnv, new Integer(sme.getCntFinal(sysEnv).intValue() + fixFinal));
+				sme.setCntFinal(sysEnv, Integer.valueOf(sme.getCntFinal(sysEnv).intValue() + fixFinal));
 			}
 			if (fixBrokenActive	!= 0) {
-				sme.setCntBrokenActive(sysEnv, new Integer(sme.getCntBrokenActive(sysEnv).intValue() + fixBrokenActive));
+				sme.setCntBrokenActive(sysEnv, Integer.valueOf(sme.getCntBrokenActive(sysEnv).intValue() + fixBrokenActive));
 			}
 			if (fixBrokenFinished	!= 0) {
-				sme.setCntBrokenFinished(sysEnv, new Integer(sme.getCntBrokenFinished(sysEnv).intValue() + fixBrokenFinished));
+				sme.setCntBrokenFinished(sysEnv, Integer.valueOf(sme.getCntBrokenFinished(sysEnv).intValue() + fixBrokenFinished));
 			}
 			if (fixError		!= 0) {
-				sme.setCntError(sysEnv, new Integer(sme.getCntError(sysEnv).intValue() + fixError));
+				sme.setCntError(sysEnv, Integer.valueOf(sme.getCntError(sysEnv).intValue() + fixError));
 			}
 			if (fixUnreachable	!= 0) {
-				sme.setCntUnreachable(sysEnv, new Integer(sme.getCntUnreachable(sysEnv).intValue() + fixUnreachable));
+				sme.setCntUnreachable(sysEnv, Integer.valueOf(sme.getCntUnreachable(sysEnv).intValue() + fixUnreachable));
 			}
 			if (fixRestartable	!= 0) {
-				sme.setCntRestartable(sysEnv, new Integer(sme.getCntRestartable(sysEnv).intValue() + fixRestartable));
+				sme.setCntRestartable(sysEnv, Integer.valueOf(sme.getCntRestartable(sysEnv).intValue() + fixRestartable));
 			}
 			if (fixWarn		!= 0) {
-				sme.setCntWarn(sysEnv, new Integer(sme.getCntWarn(sysEnv).intValue() + fixWarn));
+				sme.setCntWarn(sysEnv, Integer.valueOf(sme.getCntWarn(sysEnv).intValue() + fixWarn));
 			}
 			if (fixChildSuspended		!= 0) {
-				sme.setChildSuspended(sysEnv, new Integer(sme.getChildSuspended(sysEnv).intValue() + fixChildSuspended));
+				sme.setChildSuspended(sysEnv, Integer.valueOf(sme.getChildSuspended(sysEnv).intValue() + fixChildSuspended));
 			}
 			if (fixPending		!= 0) {
-				sme.setCntPending(sysEnv, new Integer(sme.getCntPending(sysEnv).intValue() + fixPending));
+				sme.setCntPending(sysEnv, Integer.valueOf(sme.getCntPending(sysEnv).intValue() + fixPending));
 			}
 
 			sme.fixCntInParents(sysEnv, fixSubmitted, fixDependencyWait, fixSynchronizeWait, fixResourceWait, fixRunnable,
@@ -2966,14 +2966,14 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		   )
 			idle = true;
 		if (idle && idleTs == null) {
-			setIdleTs(sysEnv, new Integer((int)((sysEnv.cEnv.last() - getSubmitTs(sysEnv).longValue()) / 1000)));
+			setIdleTs(sysEnv, Integer.valueOf((int)((sysEnv.cEnv.last() - getSubmitTs(sysEnv).longValue()) / 1000)));
 		}
 		if (!idle && idleTs != null) {
 			Integer idleTime = getIdleTime(sysEnv);
 			int iT = 0;
 			if (idleTime != null) iT = idleTime.intValue();
 			setIdleTime(sysEnv,
-			            new Integer(iT + (int)((sysEnv.cEnv.last() - getSubmitTs(sysEnv).longValue()) / 1000) - idleTs.intValue()));
+			            Integer.valueOf(iT + (int)((sysEnv.cEnv.last() - getSubmitTs(sysEnv).longValue()) / 1000) - idleTs.intValue()));
 			setIdleTs(sysEnv, null);
 		}
 	}
@@ -3006,7 +3006,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public void setResumeTs (SystemEnvironment sysEnv, Long resumeTs)
-	throws SDMSException
+		throws SDMSException
 	{
 		super.setResumeTs(sysEnv, resumeTs);
 		if (resumeTs == null)
@@ -3270,13 +3270,13 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 
 		try {
 			mra = SDMSResourceAllocationTable.idx_smeId_rId_stickyName_getUnique(sysEnv,
-				new SDMSKey(new Long(-raStickyParent.longValue()), rId, raStickyName));
+				new SDMSKey(Long.valueOf(-raStickyParent.longValue()), rId, raStickyName));
 		} catch (NotFoundException nfe) {
 			return;
 		}
 		Long mraId = mra.getId(sysEnv);
 		rav = SDMSResourceAllocationTable.idx_stickyParent_rId_stickyName.getVector(sysEnv,
-				new SDMSKey(raStickyParent, rId, raStickyName));
+			new SDMSKey(raStickyParent, rId, raStickyName));
 
 		for (int i = 0; i < rav.size(); ++i) {
 			SDMSResourceAllocation dra = (SDMSResourceAllocation) rav.get(i);
@@ -3297,21 +3297,21 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			lockmode &= dra.getLockmode(sysEnv).intValue();
 		}
 
-		mra.setLockmode(sysEnv, new Integer(lockmode));
+		mra.setLockmode(sysEnv, Integer.valueOf(lockmode));
 
 		int origAmount = mra.getOrigAmount(sysEnv).intValue();
 		if (origAmount > amount) {
 			int mraAmount = mra.getAmount(sysEnv).intValue() - (origAmount - amount);
 
-			mra.setOrigAmount(sysEnv, new Integer(amount));
-			mra.setAmount(sysEnv, new Integer(mraAmount));
+			mra.setOrigAmount(sysEnv, Integer.valueOf(amount));
+			mra.setAmount(sysEnv, Integer.valueOf(mraAmount));
 		}
 	}
 
 	public void setResourceState(SystemEnvironment sysEnv, SDMSResource r, Long rsmpId)
 		throws SDMSException
 	{
-		final Long ts = new Long ((new Date()).getTime());
+		final Long ts = Long.valueOf ((new Date()).getTime());
 		Vector v = SDMSResourceStateMappingTable.idx_rsmpId.getVector(sysEnv, rsmpId);
 		for(int i = 0; i < v.size(); i++) {
 			SDMSResourceStateMapping rsm = (SDMSResourceStateMapping) v.get(i);
@@ -3430,7 +3430,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			ths = new HashSet();
 			sysEnv.tx.txData.put(SystemEnvironment.S_TRIGGER_HASHSET, ths);
 		}
-		Vector v_tr = SDMSTriggerTable.idx_fireId_type.getVector(sysEnv, new SDMSKey(fireSeId, new Integer(trigger_type)), seVersion);
+		Vector v_tr = SDMSTriggerTable.idx_fireId_type.getVector(sysEnv, new SDMSKey(fireSeId, Integer.valueOf(trigger_type)), seVersion);
 		Iterator i_tr = v_tr.iterator();
 		while (i_tr.hasNext()) {
 			SDMSTrigger tr = (SDMSTrigger)i_tr.next();
@@ -3460,43 +3460,43 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			rawPrio = zero;
 		} else {
 			prio = se.getPriority(sysEnv);
-			rawPrio = new Integer (se.getPriority(sysEnv).intValue() * 100);
+			rawPrio = Integer.valueOf (se.getPriority(sysEnv).intValue() * 100);
 			nice = zero;
 		}
 		Integer minEP = se.getMinPriority(sysEnv);
 		if(minEP == null) {
-			minEP = new Integer(SystemEnvironment.priorityLowerBound);
+			minEP = Integer.valueOf(SystemEnvironment.priorityLowerBound);
 		}
 		Integer agingAmount = se.getAgingAmount(sysEnv);
 		Integer agingBase = se.getAgingBase(sysEnv);
 		if (agingAmount == null || agingBase == null) {
-			agingAmount = new Integer(SystemEnvironment.priorityDelay);
-			agingBase = new Integer(SDMSInterval.MINUTE);
+			agingAmount = Integer.valueOf(SystemEnvironment.priorityDelay);
+			agingBase = Integer.valueOf(SDMSInterval.MINUTE);
 		}
 		switch(agingBase.intValue()) {
 			case SDMSInterval.MINUTE:
 				break;
 			case SDMSInterval.HOUR:
-				agingAmount = new Integer((int) (agingAmount.intValue() * SDMSInterval.HOUR_DUR_M));
+				agingAmount = Integer.valueOf((int) (agingAmount.intValue() * SDMSInterval.HOUR_DUR_M));
 				break;
 			case SDMSInterval.DAY:
-				agingAmount = new Integer((int) (agingAmount.intValue() * SDMSInterval.DAY_DUR_M));
+				agingAmount = Integer.valueOf((int) (agingAmount.intValue() * SDMSInterval.DAY_DUR_M));
 				break;
 			case SDMSInterval.WEEK:
-				agingAmount = new Integer((int) (agingAmount.intValue() * SDMSInterval.WEEK_DUR_M));
+				agingAmount = Integer.valueOf((int) (agingAmount.intValue() * SDMSInterval.WEEK_DUR_M));
 				break;
 			case SDMSInterval.MONTH:
-				agingAmount = new Integer((int) (agingAmount.intValue() * SDMSInterval.MONTH_DUR_M));
+				agingAmount = Integer.valueOf((int) (agingAmount.intValue() * SDMSInterval.MONTH_DUR_M));
 				break;
 			case SDMSInterval.YEAR:
-				agingAmount = new Integer((int) (agingAmount.intValue() * SDMSInterval.YEAR_DUR_M));
+				agingAmount = Integer.valueOf((int) (agingAmount.intValue() * SDMSInterval.YEAR_DUR_M));
 				break;
 		}
-		agingBase = new Integer(SDMSInterval.MINUTE);
+		agingBase = Integer.valueOf(SDMSInterval.MINUTE);
 
 		Long opSusresTs = null;
 		if (suspended.intValue() != SDMSSubmittedEntity.NOSUSPEND)
-			opSusresTs = new Long(-submitTs.longValue());
+			opSusresTs = Long.valueOf(-submitTs.longValue());
 
 		sme = SDMSSubmittedEntityTable.table.create(sysEnv,
 				sysEnv.randomLong(),
@@ -3509,11 +3509,11 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				ownerId,
 				getId(sysEnv),
 				null,
-				new Boolean(isStatic),
-		                new Boolean(isDisabled),
-		                null,
+				Boolean.valueOf(isStatic),
+				Boolean.valueOf(isDisabled),
+				null,
 				sh.getMergeMode(sysEnv),
-				new Integer(SDMSSubmittedEntity.SUBMITTED),
+				Integer.valueOf(SDMSSubmittedEntity.SUBMITTED),
 				null,
 				null,
 				Boolean.FALSE,
@@ -3543,12 +3543,12 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				null,
 				suspended,
 				prio,
-		                rawPrio,
+				rawPrio,
 				nice,
 				zero,
 				minEP,
 				agingAmount,
-				new Integer(parentSuspended),
+				Integer.valueOf(parentSuspended),
 				zero,
 				zero,
 				null,
@@ -3580,19 +3580,19 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				zero,
 				zero,
 				zero,
-		                null,
+				null,
 				zero,
 				zero,
 				zero,
 				zero,
-		                zero,
 				zero,
 				zero,
 				zero,
 				zero,
-		                opSusresTs,
-		                null,
-		                timeZone
+				zero,
+				opSusresTs,
+				null,
+				timeZone
 		);
 
 		if (replaceSmeId != null) {
@@ -3613,7 +3613,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	private void fixChildPrioritiesAndNpNice(SystemEnvironment sysEnv, int prioDelta, Integer np_nicevalue)
-	throws SDMSException
+		throws SDMSException
 	{
 		Vector child_v = SDMSHierarchyInstanceTable.idx_parentId.getVector(sysEnv, getId(sysEnv));
 		for(int i = 0; i < child_v.size(); i++) {
@@ -3622,7 +3622,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			int parents = SDMSHierarchyInstanceTable.idx_childId.getVector(sysEnv, csme.getId(sysEnv)).size();
 			prioDelta =  prioDelta / parents;
 			if (prioDelta != 0)
-				csme.setRawPriority(sysEnv, new Integer(csme.getRawPriority(sysEnv).intValue() + prioDelta));
+				csme.setRawPriority(sysEnv, Integer.valueOf(csme.getRawPriority(sysEnv).intValue() + prioDelta));
 			csme.fixChildPrioritiesAndNpNice(sysEnv, prioDelta, np_nicevalue);
 			if (np_nicevalue != null)
 				csme.setNpNice(sysEnv, np_nicevalue);
@@ -3630,7 +3630,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public int getParentNiceX100(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 		Vector v = SDMSHierarchyInstanceTable.idx_childId.getVector(sysEnv, getId(sysEnv));
 		int parentNiceTotal = 0;
@@ -3666,7 +3666,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 			if(inv > SchedulingThread.MIN_PRIORITY)
 				inv = SchedulingThread.MIN_PRIORITY;
 			niceDelta = inv - getNice(sysEnv).intValue();
-			setNice(sysEnv, new Integer (inv));
+			setNice(sysEnv, Integer.valueOf (inv));
 		}
 		int npNiceDelta = 0;
 		if (np_nicevalue != null) {
@@ -3679,26 +3679,26 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 		if (pr != null) {
 			if (rpDelta != 0) {
 				ipr = pr.intValue() + rpDelta;
-				setRawPriority(sysEnv, new Integer(ipr));
+				setRawPriority(sysEnv, Integer.valueOf(ipr));
 			}
 		}
 		fixChildPrioritiesAndNpNice(sysEnv, rpDelta, np_nicevalue);
 	}
 
 	public void setPriority(SystemEnvironment sysEnv, Integer priority)
-	throws SDMSException
+		throws SDMSException
 	{
-		setRawPriority(sysEnv, new Integer(priority.intValue() * 100), true);
+		setRawPriority(sysEnv, Integer.valueOf(priority.intValue() * 100), true);
 	}
 
 	public void setRawPriority(SystemEnvironment sysEnv, Integer priority)
-	throws SDMSException
+		throws SDMSException
 	{
 		setRawPriority(sysEnv, priority, false);
 	}
 
 	public void setRawPriority(SystemEnvironment sysEnv, Integer priority, boolean force)
-	throws SDMSException
+		throws SDMSException
 	{
 		int irpr = priority.intValue();
 		int cpr = getPriority(sysEnv).intValue();
@@ -3721,7 +3721,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 
 		super.setRawPriority(sysEnv, priority);
 		if (ipr != cpr) {
-			super.setPriority(sysEnv, new Integer(ipr));
+			super.setPriority(sysEnv, Integer.valueOf(ipr));
 			SystemEnvironment.sched.notifyChange(sysEnv, this, SchedulingThread.PRIORITY);
 		}
 	}
@@ -3842,7 +3842,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 	}
 
 	public void updateStatistics(SystemEnvironment sysEnv)
-	throws SDMSException
+		throws SDMSException
 	{
 
 		int statTs = 0;
@@ -3929,13 +3929,13 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 					break;
 			}
 			if (statTime == null)
-				statTime = new Integer(0);
+				statTime = Integer.valueOf(0);
 			int now = (int)((sysEnv.cEnv.last() - getSubmitTs(sysEnv).longValue()) / 1000);
 			if (now < 0) now = 0;
 
 			int delta = now - statTs;
 
-			statTime = new Integer(statTime.intValue() + delta);
+			statTime = Integer.valueOf(statTime.intValue() + delta);
 
 			switch (oldStatSelect) {
 				case STAT_DEPENDENCY_WAIT:
@@ -3960,12 +3960,12 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 					setChildWaitTime(sysEnv, statTime);
 					break;
 			}
-			setStatisticTs(sysEnv, new Integer(now * 10 + newStatSelect));
+			setStatisticTs(sysEnv, Integer.valueOf(now * 10 + newStatSelect));
 		}
 	}
 
 	public Integer evaluateTime(SystemEnvironment sysEnv, Integer time, Integer timeStamp, int selector)
-	throws SDMSException
+		throws SDMSException
 	{
 		int t = 0;
 		if (time != null)
@@ -3980,7 +3980,7 @@ public class SDMSSubmittedEntity extends SDMSSubmittedEntityProxyGeneric
 				t += now - ts;
 			}
 		}
-		return new Integer(t);
+		return Integer.valueOf(t);
 	}
 }
 
